assets/css/style.css
html {
    font-size: 10px;
    font-family: 'Open Sans', sans-serif;
    box-sizing: border-box;
    background-color: #ffffff;
    background-image: url(../images/strawberries-alison-stevens-327711-unsplash_edt.jpg);
    background-size: cover;
}

body {
    width: 650px;
    margin: 0 auto;
    height: 100%;
    background-color: #ffffff;
    padding: 0px 20px 20px 20px;
    border: 5px solid black;
    overflow: auto;
    /* position: absolute; */
}

p, li {
    font-size: 16px;  
    line-height: 2;
    letter-spacing: 1px;
}
  
h1 {
    font-size: 60px;
    text-align: center;  
    margin: 0;
    padding: 20px 0px;  
    color: black;
    text-shadow: 3px 3px 1px white;
    border: 1px solid black;
}
  
.headerImg {
    background-image: url(../images/wood-nicole-wilcox-715206-unsplash_edt.jpg);
    background-size: cover;
}

img {
    display: block;
    margin: 0 auto;
}

#containerLeft {
    margin-top: 40px;  
    width: 60%;
    text-align: center;
    background-color: #ffffff;
    border: 1px solid black;
    float: left;
    clear: left;
    /* position: relative; */
}
#directions {
    padding-top: 20px;
}

#correctLetters {
    color: green; 
    font-size: 20px;
     letter-spacing: 5px;
}

#wrongLetters {
     color: red;
     letter-spacing: 5px;
}

#winBox p {
    font-size: 20px;
    line-height: 12px;
}

#totWins {
    font-size: 30px;
    padding-top: 10px;
    padding-bottom: 40px;
    /* line-height: 12px; */
}

#containerRight {
    margin-top: 40px; 
    width: 40%;
    border: 1px solid black;
    float: left;
    text-align: center;
    background-color: #ffffff;
    /* position: relative; */
}

#winWord {
    font-family: "Satisfy", cursive;
    font-size: 35px;
    line-height: 20px;
    padding-top: 50px;
    padding-bottom: 30px;
}

#winWordArea img {
    border: 1px solid black;
    margin-bottom: 20px;
    margin-top: 15px;
}

#winText {
     padding: 20px;
     font-size: 12px;
     text-align: justify;
     line-height: 15px;
}


.footerContainer {
    border-top: 3px solid black;
    width: 100%;
    background-color: #ffffff;
    color: black;
    text-align: center;  
    font-size: 10px;
    position: fixed;
    left: 0;
    bottom: 0;
    line-height: 65px;
    height: 50px;
    
}

/* @media queries go here (bottom of style.css) */
@media only screen and (max-width: 980px) {
    body {
      /* background-color: lightblue; */
      width: 100%;
    }

}

@media only screen and (max-width: 768px) {
    /* For medium screen devices */
    body {
      /* background-color: yellow; */
      width: 100%;
    }
        
}

@media only screen and (max-width: 640px) {
/* For small screen devices */
    body {
      /* background-color: green; */
      width: 100%;
    }

    img {
        width: 100%;
    }
    
    winWord {
        width: 100%;
    }
}

